@@ -1,5 +1,6 @@
 Change log 1.4 (under development)
 ----------------------------------
+* Upgraded the Mockito extension API to support Mockito 1.8.5
 
 Change log 1.3.8 (2010-05-13)
 -----------------------------
